--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h3>Israel Adesanya</h3>
           <p>
             Well known as the last stylebender, middleweight champ Israel is a
-            decorated fighter and is one of the most fluid fighter in the sport.
+            decorated fighter and is one of the most fluid fighter in the sport. He also is the longest active fighter.
           </p>
         </div>
       </a>
