--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>UFC RPG GAME</title>
+    <title>not Marvel Battle</title>
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/gamemanager.js"></script>
@@ -15,8 +15,6 @@
       <p>Create your own superfights below</p>
       <h3>Choose a fighter</h3>
     </div>
-
-    <!--Add motivation instead of mana within the tutorial-->
 
     <div class="interface">
       <!--The onclick method tells the js what fighter we have chosen to play with-->
