file directory updates

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </body>
 
   <script>
+    // When start game button is clicked this will take user to battle screen
     document.getElementById("startBattle").onclick = function() {
       location.href = "start.html";
     };
