onClick start directory fixed

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>not Marvel Battle</title>
 
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="./assets/start.html"></script>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div class="header">
@@ -20,7 +19,7 @@
   <script>
     // When start game button is clicked this will take user to battle screen
     document.getElementById("startBattle").onclick = function() {
-      location.href = "start.html";
+      location.href = "./pages/start.html";
     };
   </script>
 </html>
