--- a/pages/start.html
+++ b/pages/start.html
@@ -69,9 +69,7 @@
 
     <div class="actions"></div>
 
-    <div class="arena">
-      Hello
-    </div>
+    <div class="arena"></div>
 
     <div class="enemy"></div>
 
