--- a/pages/start.html
+++ b/pages/start.html
@@ -12,8 +12,7 @@
   </head>
   <body>
     <div class="header">
-      <p>Create your own superfights below</p>
-      <h3>Choose a fighter</h3>
+      <h1>Choose your fighter</h1>
     </div>
 
     <div class="interface">
