--- a/pages/start.html
+++ b/pages/start.html
@@ -19,49 +19,31 @@
       <!--onClick allows user to pick what fighter they can battle with-->
       
       <!-- When clicked gamemanager script will initialise and create an battle with selected fighter ready -->
-      <a href="#" onclick="GameManager.setGameStart('Adesanya')">
-        <img src="../images/player/adesanya.png" alt="adesanya" />
+      <a href="#" onclick="GameManager.setGameStart('Hulk')">
+        <img src="#" alt="hulk" />
         <div>
-          <h3>Israel Adesanya</h3>
-          <p>
-            Well known as the last stylebender, middleweight champ Israel is a
-            decorated fighter and is one of the most fluid fighter in the sport. He also is the longest active fighter.
-          </p>
+          <h3>Hulk</h3>
         </div>
       </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Jones')">
-        <img src="assets/images/jones.png" alt="jones" />
+      <a href="#" onclick="GameManager.setGameStart('Iron Man')">
+        <img src="#" alt="iron man" />
         <div>
-          <h3>Jon Jones</h3>
-          <p>
-            Many things can be said about this guy but one that we can all agree
-            on is that Jon is the G.O.A.T to grace the UFC.
-          </p>
+          <h3>Iron Man</h3>
         </div>
       </a>
 
-      <a href="#" onclick="GameManager.setGameStart('McGregor')">
-        <img src="assets/images/mcgregor.png" alt="mcgregor" />
+      <a href="#" onclick="GameManager.setGameStart('Wolverine')">
+        <img src="#" alt="wolverine" />
         <div>
-          <h3>Conor McGregor</h3>
-          <p>
-            A man that is always in the news for good and bad things but is one
-            of the most nimble fighters with a powerful left, issue is he needs
-            to be motivated.
-          </p>
+          <h3>Wolverine</h3>
         </div>
       </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Edwards')">
-        <img src="assets/images/edwards.png" alt="edwards" />
+      <a href="#" onclick="GameManager.setGameStart('Spiderman')">
+        <img src="#" alt="spiderman" />
         <div>
-          <h3>Leon Edwards</h3>
-          <p>
-            Leon is a tough and very skilled fighter, and comes from the
-            trenches of birmingham to take on the talent of the middleweight
-            division and rise to become the champion.
-          </p>
+          <h3>Spiderman</h3>
         </div>
       </a>
     </div>
