fight button added to arena UI

--- a/pages/start.html
+++ b/pages/start.html
@@ -48,9 +48,13 @@
       </a>
     </div>
 
-    <div class="actions"></div>
+    <div class="actions">
+    </div>
 
-    <div class="arena"></div>
+    <div class="arena">
+      <br />
+      <button onclick="PlayerMoves.calcAttack()">Fight</button>
+    </div>
 
     <div class="enemy"></div>
 
