--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>not Marvel Battle</title>
+    <title>Marvel Battle JS</title>
 
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
