new game ui element added for users to replay game

--- a/pages/start.html
+++ b/pages/start.html
@@ -59,6 +59,8 @@
       </div>
 
       <div class="arenaOne">
+        <button id="end-battle-final"><a href="start.html">New</a></button>
+
          <button id="opponent-search" onclick="GameManager.setFight()">Search for Opponent</button>
       
          <button id="start-fight" onclick="PlayerMoves.calcAttack()">Fight</button>
