added extra HUD

--- a/pages/start.html
+++ b/pages/start.html
@@ -55,7 +55,8 @@
 
     <div class="userHud">
       <div class="arena">
-        <p class="arenaPlayer"></p>
+        <div class="arenaPlayer"></div>
+        <div class="arenaEnemy"></div>
       </div>
 
       <div class="arenaOne">
@@ -67,7 +68,7 @@
 
          <button id="item-roll" onclick="">Infinity Stone</button>
 
-        <button id="end-battle" onclick="">MRVL</button>
+        <button id="end-battle" onclick="">MRVL Logo</button>
       </div>
 </div>
 
