--- a/pages/start.html
+++ b/pages/start.html
@@ -59,6 +59,8 @@
         <div class="arenaEnemy"></div>
       </div>
 
+      <div class="randomNum"></div>
+
       <div class="arenaOne">
         <button id="end-battle-final"><a href="start.html">New</a></button>
 
@@ -66,7 +68,7 @@
       
          <button id="start-fight" onclick="PlayerMoves.calcAttack()">Fight</button>
 
-         <button id="item-roll" onclick="">Infinity Stone</button>
+         <button id="item-roll">Infinity Stone</button>
 
         <button id="end-battle" onclick="">MRVL Logo</button>
       </div>
