--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <button id="startBattle">Start Game</button>
+      <a href="#" onclick="locationChange()"><button id="startBattle">Start Game</button></a>
     </div>
 
 
@@ -18,8 +18,8 @@
 
   <script>
     // When start game button is clicked this will take user to battle screen
-    document.getElementById("startBattle").onclick = function() {
+    const locationChange = function () {
       location.href = "./pages/start.html";
-    };
+    }
   </script>
 </html>
