--- a/pages/start.html
+++ b/pages/start.html
@@ -19,28 +19,28 @@
       <!--onClick allows user to pick what fighter they can battle with-->
       
       <!-- When clicked gamemanager script will initialise and create an battle with selected fighter ready -->
-      <a href="#" onclick="GameManager.setGameStart('Hulk')">
+      <a href="#" onclick="GameManager.setGameStart('Hulk'); openHud();">
         <img src="#" alt="hulk" />
         <div>
           <h3>Hulk</h3>
         </div>
       </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Iron Man')">
+      <a href="#" onclick="GameManager.setGameStart('Iron Man'); openHud();">
         <img src="#" alt="iron man" />
         <div>
           <h3>Iron Man</h3>
         </div>
       </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Wolverine')">
+      <a href="#" onclick="GameManager.setGameStart('Wolverine'); openHud();">
         <img src="#" alt="wolverine" />
         <div>
           <h3>Wolverine</h3>
         </div>
       </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Spiderman')">
+      <a href="#" onclick="GameManager.setGameStart('Spiderman'); openHud();">
         <img src="#" alt="spiderman" />
         <div>
           <h3>Spiderman</h3>
@@ -74,5 +74,14 @@
       </div>
 </div>
 
+
+<script>
+    // Hide HUD
+    const openHud = function () {
+    document.querySelector('.userHud').classList.add('openHidden');
+  }
+</script>
   </body>
 </html>
+
+
