font link added

--- a/pages/start.html
+++ b/pages/start.html
@@ -9,6 +9,10 @@
     <script src="../components/gamemanager.js"></script>
     <script src="../components/player.js"></script>
     <script src="../components/enemy.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="header">
@@ -22,28 +26,28 @@
       <a href="#" onclick="GameManager.setGameStart('Hulk'); gameSetInit();">
         <img src="#" alt="hulk" />
         <div>
-          <h3>Hulk</h3>
+          <p>Hulk</p>
         </div>
       </a>
 
       <a href="#" onclick="GameManager.setGameStart('Iron Man'); gameSetInit();">
         <img src="#" alt="iron man" />
         <div>
-          <h3>Iron Man</h3>
+          <p>Iron Man</p>
         </div>
       </a>
 
       <a href="#" onclick="GameManager.setGameStart('Wolverine'); gameSetInit();">
         <img src="#" alt="wolverine" />
         <div>
-          <h3>Wolverine</h3>
+          <p>Wolverine</p>
         </div>
       </a>
 
       <a href="#" onclick="GameManager.setGameStart('Spiderman'); gameSetInit();">
         <img src="#" alt="spiderman" />
         <div>
-          <h3>Spiderman</h3>
+          <p>Spiderman</p>
         </div>
       </a>
     </div>
