sprites and logo uploaded

--- a/pages/start.html
+++ b/pages/start.html
@@ -24,7 +24,7 @@
       
       <!-- When clicked gamemanager script will initialise and create an battle with selected fighter ready -->
       <a href="#" onclick="GameManager.setGameStart('Hulk'); gameSetInit();">
-        <img src="#" alt="hulk" />
+        <img src="../images/front/hulk_front.svg" alt="hulk" />
         <div>
           <p>Hulk</p>
         </div>
