--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./images/logo/white_marvel_logo_new.png">
     <title>Marvel Battle JS</title>
-
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
-  <body>
-    <div class="header">
-      <a href="#" onclick="locationChange()"><button id="startBattle">Start Game</button></a>
-    </div>
 
+  <body>
+
+  <div class="start-container">
+    <div class="row">
+      <div class="start-logo">
+        <img src="./images/logo/white_marvel_logo_new.png" alt="Not Marvel JS Battle Game"/>
+      </div>
+            <a class="start-battle-btn" href="#" onclick="locationChange()"><button id="startBattle">Start Game</button></a>
+
+            <p class="start-built">Built by Nathan Parchment</p>
+    </div>
+  </div>
 
 
   </body>
