--- a/pages/start.html
+++ b/pages/start.html
@@ -12,44 +12,59 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <div class="header">
-      <h1 class="main-heading">Choose your fighter</h1>
+      <img src="../images/logo/white_marvel_logo_new.png" alt="not marvel Logo" />
+      <h1 class="main-heading">Select Character</h1>
     </div>
 
     <div class="interface">
       <!--onClick allows user to pick what fighter they can battle with-->
       
+      <div class="row">
+        <div class="col-4">
+          <img src="../images/front/hulk_front.svg" alt="hulk" />
+          <br />
+          <p><a href="#" class="character-alias" onclick="GameManager.setGameStart('Hulk'); gameSetInit();">
+          Hulk
+      </a></p>
+        </div>
+
+        <div class="col-4">
+      <img src="../images/front/iron_man_front.svg" alt="iron man" />
+      <br />
+      <a href="#" class="character-alias" onclick="GameManager.setGameStart('Iron Man'); gameSetInit();">
+          IronMan
+      </a>
+        </div>
+
+        <div class="col-4">
+      <img src="../images/front/wolverine_front.svg" alt="wolverine" />
+      <br />
+      <a href="#" class="character-alias" onclick="GameManager.setGameStart('Wolverine'); gameSetInit();">
+          Wolverine
+      </a>
+        </div>
+      </div>
+      
       <!-- When clicked gamemanager script will initialise and create an battle with selected fighter ready -->
-      <a href="#" onclick="GameManager.setGameStart('Hulk'); gameSetInit();">
-        <img src="../images/front/hulk_front.svg" alt="hulk" />
-        <div>
-          <p>Hulk</p>
-        </div>
-      </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Iron Man'); gameSetInit();">
-        <img src="#" alt="iron man" />
-        <div>
-          <p>Iron Man</p>
-        </div>
-      </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Wolverine'); gameSetInit();">
-        <img src="#" alt="wolverine" />
-        <div>
-          <p>Wolverine</p>
-        </div>
-      </a>
 
-      <a href="#" onclick="GameManager.setGameStart('Spiderman'); gameSetInit();">
+
+
+
+      <!-- <a href="#" onclick="GameManager.setGameStart('Spiderman'); gameSetInit();">
         <img src="#" alt="spiderman" />
         <div>
           <p>Spiderman</p>
         </div>
-      </a>
+      </a> -->
     </div>
 
     <div class="enemy">
