character name to match sprite name

--- a/pages/start.html
+++ b/pages/start.html
@@ -40,7 +40,7 @@
         <div class="col">
       <img src="../images/front/iron_man_front.svg" alt="iron man" />
       <br />
-      <a href="#" class="character-alias" onclick="GameManager.setGameStart('Iron Man'); gameSetInit();">
+      <a href="#" class="character-alias" onclick="GameManager.setGameStart('Ironman'); gameSetInit();">
           IronMan
       </a>
         </div>
