--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,8 +25,6 @@
             <p class="start-built">Built by Nathan Parchment</p>
     </div>
   </div>
-
-
   </body>
 
   <script>
