--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="./images/logo/white_marvel_logo_new.png">
+    <link rel="icon" href="./images/logo/not_marvel_logo.svg">
     <title>Marvel Battle JS</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
   <div class="start-container">
     <div class="row">
       <div class="start-logo">
-        <img src="./images/logo/white_marvel_logo_new.png" alt="Not Marvel JS Battle Game"/>
+        <img src="./images/logo/not_marvel_logo.svg" alt="Not Marvel JS Battle Game"/>
       </div>
             <a class="start-battle-btn" href="#" onclick="locationChange()"><button id="startBattle">Start Game</button></a>
 
