--- a/pages/start.html
+++ b/pages/start.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="header">
-      <img src="../images/logo/white_marvel_logo_new.png" alt="not marvel Logo" />
+      <img src="../images/logo/not_marvel_logo.svg" alt="not marvel Logo" />
       <h1 class="main-heading">Select Character</h1>
     </div>
 
