--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="start-logo">
         <img src="./images/logo/not_marvel_logo.svg" alt="Not Marvel JS Battle Game"/>
       </div>
-            <a class="start-battle-btn" href="#" onclick="locationChange()"><button id="startBattle">Start Game</button></a>
+            <a class="start-battle-btn" href="#" onclick="locationChange()">
+              <button id="startBattle">Start Game</button></a>
 
             <p class="start-built">Built by Nathan Parchment</p>
     </div>
