page title and how to play page location updated

--- a/pages/start.html
+++ b/pages/start.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="../images/front/spidey-tab-icon.png">
-    <title>Marvel Battle JS</title>
+    <title>Character Select | Marvel Battle JS</title>
 
     <link rel="stylesheet" href="../styles/style.css" />
     <script src="../components/gamemanager.js"></script>
@@ -21,6 +21,10 @@
   <body>
     <div class="header">
       <img src="../images/logo/not_marvel_logo.svg" alt="not marvel Logo" />
+
+      <a class="faq-btn" href="howtoplay.html">
+        <button id="#">How to Play</button></a>
+
       <h1 class="main-heading">Select Character</h1>
     </div>
 
