content added to page

--- a/pages/howtoplay.html
+++ b/pages/howtoplay.html
@@ -16,11 +16,44 @@
       </head>
     
       <body>
-        <div class="header">
+        <div class="htp-header">
           <img src="../images/logo/not_marvel_logo.svg" alt="not marvel Logo" />
+          <br />
           <h1 class="main-heading">How to Play</h1>
         </div>
-        
-    </body>
 
+        <div class="htp-content">
+          <ol>
+
+            <!-- Search Opponent -->
+            <p class="htp-heading">How to Search for Opponent?</p>
+            <li class="htp-text">
+              Once you have selected your character click the “Search for Opponent” button. This will find an enemy for you to battle. Enemies are randomly picked. The search is not restricted you can press the button multiple times before the fight has started to cycle through various enemies. </li>
+
+             <!-- Fighting --> 
+            <p class="htp-heading">How does Fighting work?</p>
+            <li class="htp-text">
+              Will be updated for the future but for now the user can only click the fight button thus attacking the enemy. The damage done is dependant on the characters strength and the amount of times is dependant on the characters speed. Once you attack, the enemy will attack also.
+            </li>
+  
+            <!-- Infitity Stones -->
+            <p class="htp-heading">What do the Infinity Stones do?</p>
+            <li class="htp-text">
+              The infinity stone is their to help users but it can come at a price. The infinity stone can do one of three things when summoned
+              <ol>
+                <li>Character will die due to how powerful the stone is </li>
+                <li>Character will gain a health or strength boost</li>
+                <li>Infinity stone was stolen by Loki and now you have nothing </li>
+              </ol>
+            </li>
+
+            <!-- Enemy health boost -->
+            <p class="htp-heading">Enemy health keeps increasing?</p>
+            <li class="htp-text">
+              You may see certain enemies gain health at certain points, its because these enemies have regenerative abilities. So find a way to beat them!
+            </li>
+
+          </ol>
+        </div>
+    </body>
 </html>
