guide re-written

--- a/pages/howtoplay.html
+++ b/pages/howtoplay.html
@@ -33,17 +33,17 @@
              <!-- Fighting --> 
             <p class="htp-heading">How does Fighting work?</p>
             <li class="htp-text">
-              Will be updated for the future but for now the user can only click the fight button thus attacking the enemy. The damage done is dependant on the characters strength and the amount of times is dependant on the characters speed. Once you attack, the enemy will attack also.
+              Fighting mechanics will be updated for the future but for now you can only click the fight button to attack enemy. The damage done is dependant on the characters strength and the amount of time enemy is hit is dependant on the characters speed. Once you attack, the enemy will attack also.
             </li>
   
             <!-- Infitity Stones -->
             <p class="htp-heading">What do the Infinity Stones do?</p>
             <li class="htp-text">
-              The infinity stone is their to help users but it can come at a price. The infinity stone can do one of three things when summoned
+              The infinity stone is to help you, but it can come at a price. The infinity stone can do one of three things when summoned
               <ol>
-                <li>Character will die due to how powerful the stone is </li>
-                <li>Character will gain a health or strength boost</li>
-                <li>Infinity stone was stolen by Loki and now you have nothing </li>
+                <li>Your Character will die due to how powerful the stone is </li>
+                <li>Your Character will gain a health or strength boost</li>
+                <li>The Infinity stone was stolen by Loki and now you have nothing </li>
               </ol>
             </li>
 
