removed not needed ID tag

--- a/pages/start.html
+++ b/pages/start.html
@@ -23,7 +23,7 @@
       <img src="../images/logo/not_marvel_logo.svg" alt="not marvel Logo" />
 
       <a class="faq-btn" href="howtoplay.html">
-        <button id="#">How to Play</button></a>
+       How to Play</a>
 
       <h1 class="main-heading">Select Character</h1>
     </div>
@@ -117,6 +117,7 @@
     document.querySelector('.main-heading').classList.add('hidden');
     document.getElementById('select-sprites').classList.add('hidden');    
     document.querySelector('.header img').classList.add('hidden');
+    document.querySelector('.faq-btn').classList.add('hidden');
   }
 </script>
   </body>
