container class added for responsive page

--- a/pages/howtoplay.html
+++ b/pages/howtoplay.html
@@ -16,6 +16,7 @@
       </head>
     
       <body>
+        <div class="container">
         <div class="htp-header">
           <img src="../images/logo/not_marvel_logo.svg" alt="not marvel Logo" />
           <br />
@@ -55,5 +56,6 @@
 
           </ol>
         </div>
+      </div>
     </body>
 </html>
