hud logo button updated

--- a/pages/start.html
+++ b/pages/start.html
@@ -92,7 +92,9 @@
 
          <button id="item-roll">Infinity Stone</button>
 
-        <button id="end-battle" onclick="">MRVL Logo</button>
+        <button id="hud-logo">
+          <img src="../images/logo/not_marvel_logo.svg" alt="not marvel logo" />
+        </button>
       </div>
 </div>
 
@@ -103,7 +105,7 @@
     hideElements();
   }
 
-    // Hide HUD
+  // Hide HUD
   const openHud = function () {
     document.querySelector('.userHud').classList.add('openHidden');
   }
