--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-            <p class="start-built">Built by Nathan Parchment</p>
+            <p class="start-built">Built by Nathaniel Parchment</p>
     </div>
   </div>
   </body>
