removed font and updated UI

--- a/pages/howtoplay.html
+++ b/pages/howtoplay.html
@@ -12,7 +12,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
       </head>
     
       <body>
@@ -24,37 +23,33 @@
         </div>
 
         <div class="htp-content">
-          <ol>
-
             <!-- Search Opponent -->
             <p class="htp-heading">How to Search for Opponent?</p>
-            <li class="htp-text">
-              Once you have selected your character click the “Search for Opponent” button. This will find an enemy for you to battle. Enemies are randomly picked. The search is not restricted you can press the button multiple times before the fight has started to cycle through various enemies. </li>
+            <p class="htp-text">
+              Once you have selected your character click the “Search for Opponent” button. This will find an enemy for you to battle. Enemies are randomly picked. The search is not restricted you can press the button multiple times before the fight has started to cycle through various enemies. </p>
 
              <!-- Fighting --> 
             <p class="htp-heading">How does Fighting work?</p>
-            <li class="htp-text">
-              Fighting mechanics will be updated for the future but for now you can only click the fight button to attack enemy. The damage done is dependant on the characters strength and the amount of time enemy is hit is dependant on the characters speed. Once you attack, the enemy will attack also.
-            </li>
+            <p class="htp-text">
+              Fighting mechanics will be updated for the future but for now you can only click the fight button to attack enemy. The damage done is dependant on the characters strength. Whilst and the amount of time enemy is hit is dependant on the characters speed. Once you attack, the enemy will attack also.
+            </p>
   
             <!-- Infitity Stones -->
             <p class="htp-heading">What do the Infinity Stones do?</p>
-            <li class="htp-text">
+            <p class="htp-text">
               The infinity stone is to help you, but it can come at a price. The infinity stone can do one of three things when summoned
               <ol>
                 <li>Your Character will die due to how powerful the stone is </li>
                 <li>Your Character will gain a health or strength boost</li>
                 <li>The Infinity stone was stolen by Loki and now you have nothing </li>
               </ol>
-            </li>
+            </p>
 
             <!-- Enemy health boost -->
             <p class="htp-heading">Enemy health keeps increasing?</p>
             <li class="htp-text">
               You may see certain enemies gain health at certain points, its because these enemies have regenerative abilities. So find a way to beat them!
             </li>
-
-          </ol>
         </div>
       </div>
     </body>
