--- a/pages/start.html
+++ b/pages/start.html
@@ -110,7 +110,7 @@
 </div>
 
 <script>
-  // Function that executes when user selects a character
+  // Function that executes when user selects a character plus other hud changes
   const gameSetInit = function () {
     openHud();
     hideElements();
